--- a/Calculator/CSS/Calculator_CSS.css
+++ b/Calculator/CSS/Calculator_CSS.css
@@ -24,7 +24,7 @@ html {
     font-size: 5rem;
     height: 80px;
     border: none;
-    background-color: black;
+    background-color: rgb(52, 57, 58);
     color: white;
     text-align: right;
     padding-right: 20px;
@@ -39,14 +39,14 @@ button {
     background-color: transparent;
     font-size: 3.2rem;
     color: black;
-    background-image: linear-gradient(to bottom,transparent,transparent 50%, rgba(0,0,0,0.6));
-    text-shadow: 0 1px rgba(255,255,255,.05);
+    background-image: linear-gradient(to bottom,transparent,transparent 50%, rgba(7, 5, 114, 0.6));
+    text-shadow: 0 1px rgba(66, 92, 41, 0.05);
     box-shadow: inset 0 0 0 1px rgba(255,255,255,.05), inset 0 1px 0 0 rgba(255,255,255,.05), inset 0 -1px 0 0
     rgba(255,255,255,.05), 0 1px 0 0 rgba(255,255,255,.05);
 }
 
 button:hover {
-    background-color: #e1e1e1;
+    background-color: #3127f3;
 }
 
 .operator {
@@ -66,7 +66,7 @@ button:hover {
 }
 
 .equal-sign {
-    background-color: blue;
+    background-color: rgb(23, 165, 28);
     border-color: darkslategray;
     color: #fff;
     height: 100%;
@@ -74,7 +74,7 @@ button:hover {
 }
 
 .equal-sign:hover {
-    background-color: darkblue;
+    background-color: rgb(21, 104, 5);
 }
 
 .calculator-keys {
